--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
-                    <h2 class="margin-top-0 text-primary">Come Hack Brains with us</h2>
+                    <h2 class="margin-top-0 text-primary">Come Hack Brains With Us</h2>
                     <br>
                     <p class="text-faded">
                         Brainhack is a collaborative hackaton where participants develop open neuroscience-related projects. We are looking for people that have a desire to work with researchers from various background to address open neuroscience questions.
@@ -123,22 +123,22 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <img src="assets/v3.jpg" class="img-responsive" alt="Image 2">
+                    <img src="assets/v3.jpg" class="img-responsive" alt="Prater">
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <img src="assets/brainhack2.png" class="img-responsive" alt="Image 1">
+                    <img src="assets/brainhack2.png" class="img-responsive" alt="Brainhack">
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <img src="assets/v1.jpg" class="img-responsive" alt="Image 4">
+                    <img src="assets/v1.jpg" class="img-responsive" alt="Belvedere">
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <img src="assets/a1.jpg" class="img-responsive" alt="Image 5">
+                    <img src="assets/a1.jpg" class="img-responsive" alt="Brain Art Competition">
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <img src="assets/v2.jpg" class="img-responsive" alt="Image 6">
+                    <img src="assets/v2.jpg" class="img-responsive" alt="Vienna">
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <img src="assets/a.jpg" class="img-responsive" alt="Image 3">
+                    <img src="assets/a.jpg" class="img-responsive" alt="Brain Art Competition">
                 </div>
             </div>
         </div>
