fix brainhack link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" data-toggle="modal" title="Brainhack" href="http://brainhack.com">About</a>
+                        <a class="page-scroll" data-toggle="modal" title="Brainhack" href="http://brainhack.org">About</a>
                     </li>
                 </ul>
             </div>
@@ -228,7 +228,7 @@
             <div class="row">
             </div>
             <br/>
-            <span class="pull-right text-muted small"><a href="http://brainhack.com">Brainhack.org</a> ©2016 Company</span>
+            <span class="pull-right text-muted small"><a href="http://brainhack.org">Brainhack.org</a> ©2016 Company</span>
         </div>
     </footer>
 
