add hight quality image to background

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
             </div>
         </div>
-        <video controls loop autoplay class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="assets/brainhack2.png" id="video-background">
+        <video controls loop autoplay class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="assets/background.jpg" id="video-background">
             <!-- Some video options from the brain art competition: 
             https://youtu.be/jrC8iY6_aZQ
             https://youtu.be/pnB5MTLI5tI
